[package]
name = "merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["default"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "macros"] }



[profile.release]
strip = true
lto = true
codegen-units = 1